--- a/site_03/src/index.html
+++ b/site_03/src/index.html
@@ -7,6 +7,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -125,7 +126,26 @@
         </div>
     </div>
 
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/watches/first_watch.jpg" alt="watch">
+                </div>
+                <div>
+                    <img src="img/watches/second_watch.jpg" alt="watch">
+                </div>
+                <div>
+                    <img src="img/watches/third_watch.jpg" alt="watch">
+                </div>
+            </div>
+        </div>
+    </section>
 
 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
