--- a/activebox/index.html
+++ b/activebox/index.html
@@ -17,25 +17,25 @@
     <header class="header">
         <div class="container">
             <div class="header__row">
-                <a href="#!" class="header__logo">
+                <a href="#!" class="header__logo" data-scroll="#logo" id="logo">
                     <img src="img/activebox-logo.svg" alt="LOGO">
                 </a>
                 <nav class="header__menu">
                     <ul class="header__list">
                         <li>
-                            <a href="#!" class="header__link">Features</a>
+                            <a href="#!" class="header__link" data-scroll="#features">Features</a>
                         </li>
                         <li>
-                            <a href="#!" class="header__link">Works</a>
+                            <a href="#!" class="header__link" data-scroll="#works">Works</a>
                         </li>
                         <li>
-                            <a href="#!" class="header__link">Our Team</a>
+                            <a href="#!" class="header__link" data-scroll="#team">Our Team</a>
                         </li>
                         <li>
-                            <a href="#!" class="header__link">Testimonials</a>
+                            <a href="#!" class="header__link" data-scroll="#clients">Testimonials</a>
                         </li>
                         <li>
-                            <a href="#!" class="header__link">Download</a>
+                            <a href="#!" class="header__link" data-scroll="#download">Download</a>
                         </li>
                     </ul>
                 </nav>
@@ -61,7 +61,7 @@
         </div>
     </section>
     <!-- Features -->
-    <section class="features">
+    <section class="features" id="features">
         <div class="container">
             <div class="features__row">
                 <div class="features__col">
@@ -152,7 +152,7 @@
         </div>
     </section>
     <!-- Works -->
-    <section class="works">
+    <section class="works" id="works">
         <div class="works__row">
             <div class="works__col">
                 <div class="works__card card">
@@ -245,7 +245,7 @@
         </div>
     </section>
     <!-- Team -->
-    <section class="team">
+    <section class="team" id="team">
         <div class="container">
             <div class="team__row">
                 <div class="team__col">
@@ -444,7 +444,7 @@
         </div>
     </section>
     <!-- Clients -->
-    <section class="clients">
+    <section class="clients" id="clients">
         <div class="container">
             <div class="clients__row">
                 <div class="clients__col">
@@ -470,7 +470,7 @@
         </div>
     </section>
     <!-- Download -->
-    <section class="download">
+    <section class="download" id="download">
         <div class="container">
             <div class="download__row">
                 <h2 class="download__title">
