--- a/activebox/index.html
+++ b/activebox/index.html
@@ -444,7 +444,7 @@
         </div>
     </section>
     <!-- Clients -->
-    <section class="clients" id="clients">
+    <!-- <section class="clients" id="clients">
         <div class="container">
             <div class="clients__row">
                 <div class="clients__col">
@@ -467,6 +467,28 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section> -->
+    <!-- Clients -->
+    <section class="clients" id="clients">
+        <div class="clients__content">
+            <div class="clients__container">
+                <div class="clients__slider slider">
+                    <div class="slider__item">
+                        <div class="slider__text">
+                            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio
+                            dui.
+                            Aenean eu leo quam...”
+                        </div>
+                        <div class="slider__author">
+                            Susan Sims, Interaction Designer at XYZ
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clients__img">
+            <img src="img/clients/01.jpg" alt="01">
         </div>
     </section>
     <!-- Download -->
