--- a/activebox/index.html
+++ b/activebox/index.html
@@ -472,7 +472,7 @@
     <!-- Clients -->
     <section class="clients" id="clients">
         <div class="clients__content">
-            <div class="clients__container">
+            <div class="container">
                 <div class="clients__slider slider">
                     <div class="slider__item">
                         <div class="slider__text">
